<resources>
    <string name="app_name" translatable="false">Demo App</string>

    <string name="web_client_id" translatable="false">953529146221-v6kuh0434o7t4b97fkos8lk0hnqn5vq1.apps.googleusercontent.com</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="menu_save">Save</string>
    <string name="menu_encryption">Encrypt</string>
    <string name="menu_decrypt">Decrypt</string>
    <string name="menu_clear">Clear</string>
    <string name="menu_task">Task Name</string>
    <string name="menu_noraml">Enter normal text</string>
    <string name="menu_secret">Enter secret key </string>
    <string name="menu_date">Date and time</string>
    <string name="delet">Delete</string>
    <string name="delete_message">Are you sure you want to delete this task?</string>
    <string name="alert">Are you sure you want to logout?</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="todo">Todo</string>
    <string name="Encryption">Encryption</string>
    <string name="Stopwatch">Stopwatch</string>
    <string name="Language">Change Language </string>
    <string name="logout">Logout </string>
    <string name="home">Home </string>


    <string-array name="languages">
        <item>English</item>
        <item>لغة</item>

    </string-array>
</resources>