<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="50dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"

        >
        <LinearLayout
            android:id="@+id/ll_todo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:background="@drawable/boat_button"

            android:gravity="center">

            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/ic_launcher"

                    ></ImageView>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_todo"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/todo"
                android:textColor="#000"
                android:gravity="center"
                android:padding="10dp"
                ></TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_enc"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:background="@drawable/boat_button"

            android:gravity="center">

            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/ic_launcher"

                   ></ImageView>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_enc"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/Encryption"
                android:textColor="#000"
                android:gravity="center"
                android:padding="10dp"
                ></TextView>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"

        >
        <LinearLayout
            android:id="@+id/ll_stop_watch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:background="@drawable/boat_button"

            android:gravity="center">

            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/ic_launcher"

                    ></ImageView>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_sw"

                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="Stop watch"
                android:textColor="#000"
                android:gravity="center"
                android:padding="10dp"
                ></TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_ch_langigae"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/boat_button"
            >

            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/ic_launcher"
                    ></ImageView>

            </LinearLayout>

            <TextView
                android:id="@+id/cl"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/Language"
                android:textColor="#000"
                android:gravity="center"
                android:padding="10dp"
                ></TextView>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>